# FAST-CON

./: README.md
BFS-4K/: bfs4K.cpp  config.h  configure.sh
BFS-4K/Util/: cudaUtil.cuh  fUtil.h
BFS-4K/include/device/: cudaGraph.cuh  definition.cuh
BFS-4K/src/device/: BFS_WorkEfficient.cu  cudaGraph.cu
BFS-4K/src/device/Util/: GlobalWrite.cu
BFS-4K/src/device/WorkEfficientKernel/: BFS_WE_Block.cu  BFS_WE_Dynamic.cu  BFS_WE_KernelDispatch.cu  BFS_WE_KernelMain.cu  BFS_WE_Kernels1.cu
BFS-4K/src/host/: getResidentThreads.cu  graph.cpp
BFS_4K_BLOCK/: CMakeLists.txt  bfs4K.cpp  config.h
BFS_4K_BLOCK/Util/: Timer.cu  cudaUtil.cuh  fUtil.cpp  fastQueue.h  readGraph.h
BFS_4K_BLOCK/cub-1.4.0/cub/device/dispatch/: dispatch_scan.cuh
BFS_4K_BLOCK/include/device/: cudaGraph.cuh
BFS_4K_BLOCK/src/: getDeviceInfo.cu
BFS_4K_BLOCK/src/device/: BFS_WorkEfficient.cu  cudaGraph.cu
BFS_4K_BLOCK/src/device/Util/: GlobalWrite.cu
BFS_4K_BLOCK/src/device/WorkEfficientKernel/: BFS_WE_AdjMatrixAnalysis.cu  BFS_WE_Block.cu  BFS_WE_Dynamic.cu  BFS_WE_KernelDispatch.cu  BFS_WE_KernelMain.cu  BFS_WE_Kernels1.cu
BFS_4K_DS/: CMakeLists.txt  FileFormat.txt  bfs4K.cpp  config.h
BFS_4K_DS/Util/: cudaUtil.cuh  readGraphDegree.cpp  readGraphHeader.cpp  readGraphMPG.cpp  readGraphSTD.cpp  readUtil.cpp
BFS_4K_DS/cub-1.4.0/cub/block/: block_scan.cuh
BFS_4K_DS/cub-1.4.0/cub/thread/: thread_store.cuh
BFS_4K_DS/include/device/: cudaGraph.cuh
BFS_4K_DS/include/host/: graph.h
BFS_4K_DS/src/device/: BFS_WorkEfficient.cu  cudaGraph.cu
BFS_4K_DS/src/device/Util/: GlobalSync.cu  GlobalWrite.cu  prefixSumAsm.cu  ptx.cu
BFS_4K_DS/src/device/WorkEfficientKernel/: BFS_WE_Block.cu  BFS_WE_KernelDispatch.cu  BFS_WE_KernelMain.cu  BFS_WE_Kernels1.cu
BFS_4K_MULTI/: README.txt  bfs4K.cpp  config.h
BFS_4K_MULTI/Util/: Timer.cuh  cudaUtil.cuh  fUtil.h  printExt.h  readUtil.h
BFS_4K_MULTI/cub-1.4.0/cub/warp/specializations/: warp_scan_shfl.cuh
BFS_4K_MULTI/include/device/: cudaGraph.cuh
BFS_4K_MULTI/src/device/: BFS_WorkEfficient.cu  cudaGraph.cu
BFS_4K_MULTI/src/device/WorkEfficientKernel/: BFS_WE_Block.cu  BFS_WE_Dynamic.cu  BFS_WE_KernelDispatch.cu  BFS_WE_KernelMain.cu  BFS_WE_Kernels1.cu
BFS_4K_MULTI/src/host/: graph.cpp
bernaschi/ST_CONN_ONE_ATOMIC/current-st/generator/: Makefile.CINECA.mpi  Makefile.CRAY.mpi  Makefile.DIABLO.mpi  Makefile.JAZZ.mpi  Makefile.MACOSX.mpi  Makefile.MAXLAP.mpi  Makefile.PLX.mpi  Makefile.QUONG.mpi  generator_test_mpi
bernaschi/ST_CONN_ONE_ATOMIC/current-st/st-conn/: Makefile  adj_func.c  convert_to_csr.c  cputils.c  extraction.py  gputils.c  graphtest.2070.sh  graphtest.GTX1060.sh  graphtest.K40.sh  load_graph.c  load_graph.h  main.c  make_bfs.c  make_bfs_func.cu  make_stcon.c  make_stcon_func.cu  make_struct.c  make_struct_gpufunc.cu  mythrustlib.cu  nohup.out  reference_functions.c  st-con_mpi_cuda
bernaschi/ST_CONN_ONE_ATOMIC/current-st/st-conn/cudakernel/: bfs_kernel.cu  gstruct_kernel.cu~  mykernels.h~  stcon_kernel.cu  stcon_kernel.cu.PETERSON  stcon_kernel.cu~
bernaschi/ST_CONN_ONE_ATOMIC/current-st/st-conn/data/: st_stats_20200418_140644  st_stats_20200418_140705  st_stats_20200418_140708  st_stats_20200418_140711  st_stats_20200418_140715  st_stats_20200418_140719  st_stats_20200418_140727  st_stats_20200418_140759  st_stats_20200418_140803  st_stats_20200418_140806  st_stats_20200418_141047  st_stats_20200418_141050  st_stats_20200418_141054  st_stats_20200418_141057  st_stats_20200418_141101  st_stats_20200418_141109  st_stats_20200418_141144  st_stats_20200418_141149  st_stats_20200418_141151  st_stats_20200418_141323  st_stats_20200418_141405  st_stats_20200418_141407  st_stats_20200418_141411  st_stats_20200418_141415  st_stats_20200418_141418  st_stats_20200418_141427  st_stats_20200418_141500  st_stats_20200418_141504  st_stats_20200418_141506  st_stats_20200418_141508  st_stats_20200418_141539  st_stats_20200418_141541  (+125 more)
(+156 files in other folders)
